--- a/SERVER/package.json
+++ b/SERVER/package.json
@@ -11,6 +11,13 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@adminjs/fastify": "^4.2.0",
+    "@adminjs/mongoose": "^4.1.0",
+    "@adminjs/themes": "^1.0.1",
+    "@fastify/cookie": "^11.0.2",
+    "@fastify/session": "^11.1.0",
+    "adminjs": "^7.8.16",
+    "connect-mongodb-session": "^5.0.0",
     "dotenv": "^16.5.0",
     "fastify": "^4.29.1",
     "fastify-socket.io": "^5.1.0",
